--- a/camp/.settings/org.eclipse.jdt.core.prefs
+++ b/camp/.settings/org.eclipse.jdt.core.prefs
@@ -1,6 +1,6 @@
 =\=\=\=\=\=\=
 <<<<<<<=HEAD
->>>>>>>=eunju
+>>>>>>>=development
 eclipse.preferences.version=1
 org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
 org.eclipse.jdt.core.compiler.codegen.targetPlatform=11
@@ -14,9 +14,5 @@ org.eclipse.jdt.core.compiler.problem.enablePreviewFeatures=disabled
 org.eclipse.jdt.core.compiler.problem.enumIdentifier=error
 org.eclipse.jdt.core.compiler.problem.forbiddenReference=warning
 org.eclipse.jdt.core.compiler.problem.reportPreviewFeatures=warning
-<<<<<<< HEAD
 org.eclipse.jdt.core.compiler.release=enabled
-=======
-org.eclipse.jdt.core.compiler.release=disabled
->>>>>>> development
 org.eclipse.jdt.core.compiler.source=11
