--- a/camp/src/main/webapp/WEB-INF/web.xml
+++ b/camp/src/main/webapp/WEB-INF/web.xml
@@ -45,4 +45,18 @@
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	
+	
+	<!-- CORSFilter 설정 : 인스타그램 연결관련 필터-->
+	<!-- <filter>
+	  <filter-name>CORSFilter</filter-name>
+	  <filter-class>team.project.camp.common.filter.CORSFilter</filter-class>
+	</filter>
+	<filter-mapping>
+	  <filter-name>CORSFilter</filter-name>
+	  <url-pattern>/*</url-pattern> 모든요청에 매핑-->
+	<!-- </filter-mapping> -->
+	
+	
+	
 </web-app>
